add updated readme docs